# Project-Llama

./: .gitignore  .gitmodules  .travis.yml  README.md  a.out  build_cpp.sh  coverage.info  hw.cpp  hw.gcda  hw.gcno  index.html  l.cpp  l.h  m.cpp  params.json  testlib.cpp
a.out.dSYM/Contents/: Info.plist
a.out.dSYM/Contents/Resources/DWARF/: a.out
lint/: lint_cpp.sh
llama_cpp/: CMakeLists.txt  CodeCoverage.cmake  README.md  lint_cpp.sh.REMOVED.git-id  test_build.cpp
llama_cpp/Cryptography/: Cryptography.cpp  Cryptography.h
llama_cpp/benchmark/: install_benchmark.sh
llama_cpp/benchmark/bpnn/: BPNNBenchmark.cpp
llama_cpp/benchmark/sort_benchmark/: CMakeLists.txt  sort_benchmark.cpp
llama_cpp/example/alpaca_sort_test/: CMakeLists.txt  alpaca_sort_test.cpp
llama_cpp/example/bpnn_and/: main.cpp
llama_cpp/example/bpnn_logic/: main.cpp
llama_cpp/example/data_generator/: main.cpp
llama_cpp/example/functor_test/: functor_test.cpp
llama_cpp/example/kmeans/: CMakeLists.txt  main.cpp
llama_cpp/example/llama_sort_test/: CMakeLists.txt  llama_sort_test.cpp
llama_cpp/example/llobject/: llobject.cpp
llama_cpp/example/logger/: logger.cpp
llama_cpp/example/mersenne_twister/: CMakeLists.txt  mersenne_twister.cpp
llama_cpp/example/mnist_nn/: MNISTReader.h  mnistNN.cpp  mnistReader.h  mnist_nn.cpp
llama_cpp/example/neural_sudoku/: minSudokuTest.cpp  singleTileTest.cpp
llama_cpp/example/neural_sudoku/Resources/: puzzle.csv  solution.csv  sudokuSpider.py
llama_cpp/example/rsa/: CMakeLists.txt  private.pem  public.pem  rsa.cpp
llama_cpp/example/simple_data_pack/: main.cpp
llama_cpp/example/sort_test/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  sort_test.cpp
llama_cpp/example/spam_classification/: CMakeLists.txt  spam_classification.cpp
llama_cpp/example/test_build/: CMakeLists.txt  test_build.cpp
llama_cpp/llama_cpp.xcodeproj/: project.pbxproj
llama_cpp/llama_cpp.xcodeproj/project.xcworkspace/xcuserdata/Sunbelife.xcuserdatad/: UserInterfaceState.xcuserstate
llama_cpp/llama_cpp.xcodeproj/xcuserdata/Sunbelife.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RUN_TESTS.xcscheme  ZERO_CHECK.xcscheme  alpaca_sort_test.xcscheme  kmeans.xcscheme  llama.xcscheme  mersenne_twister.xcscheme  rsa.xcscheme  sort_benchmark.xcscheme  sort_test.xcscheme  spam_classification.xcscheme  test_build.xcscheme  xcschememanagement.plist
llama_cpp/src/: llama.h
llama_cpp/src/Cryptography/: Cryptography.cpp  Cryptography.h
llama_cpp/src/DataGenerator/: DataGenerator.cpp  DataGenerator.h  DataGenerator.hpp  main.cpp
llama_cpp/src/DataStructure/: LLObject.h
llama_cpp/src/ML/: NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  NeuralNetwork.cpp  NeuralNetwork.h  kmeans.h  kmeans.hpp
llama_cpp/src/RNG/: MersenneTwister.cpp  MersenneTwister.h
llama_cpp/src/Search/: IterativeSearch.h  Search.h
llama_cpp/src/Sort/: BruteForceSort.h  BruteForceSort.h~  BubbleSort.h  InsertionSort.h  MergeSort.h  SelectionSort.h  Selectionsort.h  Sort.h  Sort.hpp  Sort.h~  a.out  hpSort.h  main.cpp  main.cpp~
llama_cpp/src/Utility/: DataGenerator.cpp  DataGenerator.h  DataProcessor.cpp  DataProcessor.h  Functor.h  Logger.h  Savable.cpp  Savable.h  SimpleDataPack.h  module_check.h
llama_cpp/test/: TestDataGenerator.cpp  install_test.sh
llama_cpp/test/Llama_UnitTest/: MLUnitTest.cpp  NeuralNetworkUnitTest.cpp  SortUnitTest.cpp  UtilityDataGeneratorUnitTest.cpp  UtilityFunctorTest.cpp  UtilityLoggerUnitTest.cpp  entry.cpp
llama_cpp/test/ML_UnitTest/: MLTest.cpp
llama_cpp/test/Sort_UnitTest/: SortUnitTest.cpp
llama_cpp/test/llama_library/: llama_ut.cpp
llama_java/: build.gradle  local.properties  settings.gradle
llama_java/gradle/wrapper/: gradle-wrapper.properties
llama_java/src/main/java/: Library.java
llama_java/src/main/java/com/llama_group/: TestBuild.java
llama_java/src/test/java/: LibraryTest.java
